gen/org/intellij/sdk/language/parser/VLayoutParser.java
// This is a generated file. Not intended for manual editing.
package org.intellij.sdk.language.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static org.intellij.sdk.language.psi.VLayoutTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class VLayoutParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return VLayoutFile(b, l + 1);
  }

  /* ********************************************************** */
  // !<<eof>> topDeclaration *
  static boolean VLayoutFile(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "VLayoutFile")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = VLayoutFile_0(b, l + 1);
    r = r && VLayoutFile_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // !<<eof>>
  private static boolean VLayoutFile_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "VLayoutFile_0")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NOT_);
    r = !eof(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // topDeclaration *
  private static boolean VLayoutFile_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "VLayoutFile_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!topDeclaration(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "VLayoutFile_1", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // mulDivExpr addSubOp*
  public static boolean addSubExpr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "addSubExpr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ADD_SUB_EXPR, "<add sub expr>");
    r = mulDivExpr(b, l + 1);
    r = r && addSubExpr_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // addSubOp*
  private static boolean addSubExpr_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "addSubExpr_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!addSubOp(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "addSubExpr_1", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // (OP_PLUS|OP_MINUS) mulDivExpr
  static boolean addSubOp(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "addSubOp")) return false;
    if (!nextTokenIs(b, "", OP_MINUS, OP_PLUS)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _LEFT_INNER_);
    r = addSubOp_0(b, l + 1);
    r = r && mulDivExpr(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // OP_PLUS|OP_MINUS
  private static boolean addSubOp_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "addSubOp_0")) return false;
    boolean r;
    r = consumeToken(b, OP_PLUS);
    if (!r) r = consumeToken(b, OP_MINUS);
    return r;
  }

  /* ********************************************************** */
  // OP_ALT simpleExpr
  static boolean altOp(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "altOp")) return false;
    if (!nextTokenIs(b, OP_ALT)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _LEFT_INNER_);
    r = consumeToken(b, OP_ALT);
    r = r && simpleExpr(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // simpleExpr altOp *
  public static boolean alternativeExpr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "alternativeExpr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ALTERNATIVE_EXPR, "<alternative expr>");
    r = simpleExpr(b, l + 1);
    r = r && alternativeExpr_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // altOp *
  private static boolean alternativeExpr_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "alternativeExpr_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!altOp(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "alternativeExpr_1", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // id OP_COLON viewType
  public static boolean bindingDeclaration(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bindingDeclaration")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, BINDING_DECLARATION, "<binding declaration>");
    r = consumeTokens(b, 1, ID, OP_COLON);
    p = r; // pin = 1
    r = r && viewType(b, l + 1);
    exit_section_(b, l, m, r, p, pairRecover_parser_);
    return r || p;
  }

  /* ********************************************************** */
  // 'bindings' LEFT_BRACE bindingDeclaration * RIGHT_BRACE
  public static boolean bindingsSection(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bindingsSection")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BINDINGS_SECTION, "<bindings section>");
    r = consumeToken(b, "bindings");
    r = r && consumeToken(b, LEFT_BRACE);
    r = r && bindingsSection_2(b, l + 1);
    r = r && consumeToken(b, RIGHT_BRACE);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // bindingDeclaration *
  private static boolean bindingsSection_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bindingsSection_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!bindingDeclaration(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "bindingsSection_2", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // <<param>> ( ',' <<param>> ) *
  public static boolean comma_separated_list(PsiBuilder b, int l, Parser _param) {
    if (!recursion_guard_(b, l, "comma_separated_list")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = _param.parse(b, l);
    r = r && comma_separated_list_1(b, l + 1, _param);
    exit_section_(b, m, COMMA_SEPARATED_LIST, r);
    return r;
  }

  // ( ',' <<param>> ) *
  private static boolean comma_separated_list_1(PsiBuilder b, int l, Parser _param) {
    if (!recursion_guard_(b, l, "comma_separated_list_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!comma_separated_list_1_0(b, l + 1, _param)) break;
      if (!empty_element_parsed_guard_(b, "comma_separated_list_1", c)) break;
    }
    return true;
  }

  // ',' <<param>>
  private static boolean comma_separated_list_1_0(PsiBuilder b, int l, Parser _param) {
    if (!recursion_guard_(b, l, "comma_separated_list_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, OP_COMMA);
    r = r && _param.parse(b, l);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // addSubExpr (compareOp addSubExpr)?
  public static boolean compareExpr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "compareExpr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, COMPARE_EXPR, "<compare expr>");
    r = addSubExpr(b, l + 1);
    r = r && compareExpr_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (compareOp addSubExpr)?
  private static boolean compareExpr_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "compareExpr_1")) return false;
    compareExpr_1_0(b, l + 1);
    return true;
  }

  // compareOp addSubExpr
  private static boolean compareExpr_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "compareExpr_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = compareOp(b, l + 1);
    r = r && addSubExpr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // OP_MORE | OP_MORE_EQ | OP_LESS | OP_LESS_EQ | OP_EQEQ | OP_NEQ
  static boolean compareOp(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "compareOp")) return false;
    boolean r;
    r = consumeToken(b, OP_MORE);
    if (!r) r = consumeToken(b, OP_MORE_EQ);
    if (!r) r = consumeToken(b, OP_LESS);
    if (!r) r = consumeToken(b, OP_LESS_EQ);
    if (!r) r = consumeToken(b, OP_EQEQ);
    if (!r) r = consumeToken(b, OP_NEQ);
    return r;
  }

  /* ********************************************************** */
  // LEFT_BRACE inputDeclaration * RIGHT_BRACE
  public static boolean complexInput(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "complexInput")) return false;
    if (!nextTokenIs(b, LEFT_BRACE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LEFT_BRACE);
    r = r && complexInput_1(b, l + 1);
    r = r && consumeToken(b, RIGHT_BRACE);
    exit_section_(b, m, COMPLEX_INPUT, r);
    return r;
  }

  // inputDeclaration *
  private static boolean complexInput_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "complexInput_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!inputDeclaration(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "complexInput_1", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // LEFT_BRACE propertyDeclaration * RIGHT_BRACE
  public static boolean complexPropertyDeclaration(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "complexPropertyDeclaration")) return false;
    if (!nextTokenIs(b, LEFT_BRACE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LEFT_BRACE);
    r = r && complexPropertyDeclaration_1(b, l + 1);
    r = r && consumeToken(b, RIGHT_BRACE);
    exit_section_(b, m, COMPLEX_PROPERTY_DECLARATION, r);
    return r;
  }

  // propertyDeclaration *
  private static boolean complexPropertyDeclaration_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "complexPropertyDeclaration_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!propertyDeclaration(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "complexPropertyDeclaration_1", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // LEFT_BRACE prototypeContent * RIGHT_BRACE
  public static boolean complexPrototypeContent(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "complexPrototypeContent")) return false;
    if (!nextTokenIs(b, LEFT_BRACE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LEFT_BRACE);
    r = r && complexPrototypeContent_1(b, l + 1);
    r = r && consumeToken(b, RIGHT_BRACE);
    exit_section_(b, m, COMPLEX_PROTOTYPE_CONTENT, r);
    return r;
  }

  // prototypeContent *
  private static boolean complexPrototypeContent_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "complexPrototypeContent_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!prototypeContent(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "complexPrototypeContent_1", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // propertyKey LEFT_BRACE simpleViewProperty * RIGHT_BRACE
  public static boolean complexViewProperty(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "complexViewProperty")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, COMPLEX_VIEW_PROPERTY, "<complex view property>");
    r = propertyKey(b, l + 1);
    r = r && consumeToken(b, LEFT_BRACE);
    r = r && complexViewProperty_2(b, l + 1);
    r = r && consumeToken(b, RIGHT_BRACE);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // simpleViewProperty *
  private static boolean complexViewProperty_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "complexViewProperty_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!simpleViewProperty(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "complexViewProperty_2", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // logicalOrExpr (OP_OPT expr OP_COLON conditionalExpr)?
  public static boolean conditionalExpr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "conditionalExpr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CONDITIONAL_EXPR, "<conditional expr>");
    r = logicalOrExpr(b, l + 1);
    r = r && conditionalExpr_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (OP_OPT expr OP_COLON conditionalExpr)?
  private static boolean conditionalExpr_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "conditionalExpr_1")) return false;
    conditionalExpr_1_0(b, l + 1);
    return true;
  }

  // OP_OPT expr OP_COLON conditionalExpr
  private static boolean conditionalExpr_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "conditionalExpr_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, OP_OPT);
    r = r && expr(b, l + 1);
    r = r && consumeToken(b, OP_COLON);
    r = r && conditionalExpr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // string | number | color | CONST_TRUE | CONST_FALSE
  public static boolean constantExpr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constantExpr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CONSTANT_EXPR, "<constant expr>");
    r = consumeToken(b, STRING);
    if (!r) r = consumeToken(b, NUMBER);
    if (!r) r = consumeToken(b, COLOR);
    if (!r) r = consumeToken(b, CONST_TRUE);
    if (!r) r = consumeToken(b, CONST_FALSE);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // 'enum' LEFT_PAREN enumItems * RIGHT_PAREN
  public static boolean enumDeclaration(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enumDeclaration")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ENUM_DECLARATION, "<enum declaration>");
    r = consumeToken(b, "enum");
    r = r && consumeToken(b, LEFT_PAREN);
    r = r && enumDeclaration_2(b, l + 1);
    r = r && consumeToken(b, RIGHT_PAREN);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // enumItems *
  private static boolean enumDeclaration_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enumDeclaration_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!enumItems(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "enumDeclaration_2", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // id
  public static boolean enumElement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enumElement")) return false;
    if (!nextTokenIs(b, ID)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ID);
    exit_section_(b, m, ENUM_ELEMENT, r);
    return r;
  }

  /* ********************************************************** */
  // <<comma_separated_list enumElement>>
  static boolean enumItems(PsiBuilder b, int l) {
    return comma_separated_list(b, l + 1, enumElement_parser_);
  }

  /* ********************************************************** */
  // compareExpr (OP_EQEQ compareExpr)?
  public static boolean equalExpr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "equalExpr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EQUAL_EXPR, "<equal expr>");
    r = compareExpr(b, l + 1);
    r = r && equalExpr_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (OP_EQEQ compareExpr)?
  private static boolean equalExpr_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "equalExpr_1")) return false;
    equalExpr_1_0(b, l + 1);
    return true;
  }

  // OP_EQEQ compareExpr
  private static boolean equalExpr_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "equalExpr_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, OP_EQEQ);
    r = r && compareExpr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // conditionalExpr
  public static boolean expr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EXPR, "<expr>");
    r = conditionalExpr(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // (id|LOCALIZED) LEFT_PAREN <<comma_separated_list expr>> RIGHT_PAREN
  public static boolean functionCall(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "functionCall")) return false;
    if (!nextTokenIs(b, "<function call>", ID, LOCALIZED)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, FUNCTION_CALL, "<function call>");
    r = functionCall_0(b, l + 1);
    r = r && consumeToken(b, LEFT_PAREN);
    r = r && comma_separated_list(b, l + 1, expr_parser_);
    r = r && consumeToken(b, RIGHT_PAREN);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // id|LOCALIZED
  private static boolean functionCall_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "functionCall_0")) return false;
    boolean r;
    r = consumeToken(b, ID);
    if (!r) r = consumeToken(b, LOCALIZED);
    return r;
  }

  /* ********************************************************** */
  // id LEFT_PAREN <<comma_separated_list functionParameter>> RIGHT_PAREN '=>' expr
  public static boolean functionDeclaration(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "functionDeclaration")) return false;
    if (!nextTokenIs(b, ID)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, ID, LEFT_PAREN);
    r = r && comma_separated_list(b, l + 1, functionParameter_parser_);
    r = r && consumeToken(b, RIGHT_PAREN);
    r = r && consumeToken(b, "=>");
    r = r && expr(b, l + 1);
    exit_section_(b, m, FUNCTION_DECLARATION, r);
    return r;
  }

  /* ********************************************************** */
  // id OP_COLON id
  public static boolean functionParameter(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "functionParameter")) return false;
    if (!nextTokenIs(b, ID)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, ID, OP_COLON, ID);
    exit_section_(b, m, FUNCTION_PARAMETER, r);
    return r;
  }

  /* ********************************************************** */
  // 'functions' LEFT_BRACE functionDeclaration * RIGHT_BRACE
  public static boolean functionsSection(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "functionsSection")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, FUNCTIONS_SECTION, "<functions section>");
    r = consumeToken(b, "functions");
    r = r && consumeToken(b, LEFT_BRACE);
    r = r && functionsSection_2(b, l + 1);
    r = r && consumeToken(b, RIGHT_BRACE);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // functionDeclaration *
  private static boolean functionsSection_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "functionsSection_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!functionDeclaration(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "functionsSection_2", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // 'include' OP_COLON string
  public static boolean include(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "include")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, INCLUDE, "<include>");
    r = consumeToken(b, "include");
    r = r && consumeTokens(b, 0, OP_COLON, STRING);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // LEFT_PAREN expr RIGHT_PAREN
  static boolean innerExpr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "innerExpr")) return false;
    if (!nextTokenIs(b, LEFT_PAREN)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LEFT_PAREN);
    r = r && expr(b, l + 1);
    r = r && consumeToken(b, RIGHT_PAREN);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // id (simpleInput | complexInput)
  public static boolean inputDeclaration(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "inputDeclaration")) return false;
    if (!nextTokenIs(b, ID)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, INPUT_DECLARATION, null);
    r = consumeToken(b, ID);
    p = r; // pin = 1
    r = r && inputDeclaration_1(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // simpleInput | complexInput
  private static boolean inputDeclaration_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "inputDeclaration_1")) return false;
    boolean r;
    r = simpleInput(b, l + 1);
    if (!r) r = complexInput(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // 'inputs' LEFT_BRACE inputDeclaration * RIGHT_BRACE
  public static boolean inputsSection(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "inputsSection")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, INPUTS_SECTION, "<inputs section>");
    r = consumeToken(b, "inputs");
    r = r && consumeToken(b, LEFT_BRACE);
    r = r && inputsSection_2(b, l + 1);
    r = r && consumeToken(b, RIGHT_BRACE);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // inputDeclaration *
  private static boolean inputsSection_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "inputsSection_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!inputDeclaration(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "inputsSection_2", c)) break;
    }
    return true;
  }
